# simplemath

./: LICENSE  README.md  pyproject.toml
src/simplemath/: __init__.py  arithmetic.py
src/simplemath.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_arithmetic.py
